# OOP_MAI_LAB1

./: CMakeLists.txt  README.md  main.cpp
include/: function.h
src/: function.cpp
test/: tests.cpp
